apache2 (2.2.14-6) UNRELEASED; urgency=low

  * Move ab and logresolve from /usr/sbin to /usr/bin. Closes: #351450, #564061
  * Add new init script action graceful-stop (LP: #456381)
  * Make bug script also display php extensions.

 -- Stefan Fritsch <sf@debian.org>  Sat, 09 Jan 2010 13:11:11 +0100

apache2 (2.2.14-5) unstable; urgency=low

  * Security: Further mitigation for the TLS renegotation attack
    (CVE-2009-3555): Disable keep-alive if parts of the next request have
    already been received when doing a renegotiation. This defends against
    some request splicing attacks.
  * Print a useful error message if 'apache2ctl status' fails. Add a comment
    to /etc/apache2/envvars on how to change the options for www-browser.
    Closes: #561496, #272069
  * Improve function to detect apache2 pid in init-script (closes: #562583).
  * Add hint README.Debian on how to pass auth info to CGI scripts.
    Closes: #483219
  * Re-introduce objcopy magic to avoid dangling symlinks to the debug info
    in the mpm packages. Closes: #563278
  * Make apxs2 use a2enmod and /etc/apache2/mods-available. Closes: #470178,
    LP: #500703
  * Point to README.backtrace in apache2-dbg's description.
  * Use more debhelper functions to simplify debian/rules.
  * Add misc-depends to various packages to make lintian happy.
  * Change build-dep from libcap2-dev to libcap-dev because of package rename.

 -- Stefan Fritsch <sf@debian.org>  Sat, 02 Jan 2010 22:44:15 +0100

apache2 (2.2.14-4) unstable; urgency=low

  * Disable localized error pages again by default because they break
    configurations with "<Location /> SetHandler ...". A workaround is
    described in the comments in /etc/apache2/conf.d/localized-error-pages
    (closes: #543333).
  * mod_rewrite: Fix URLs in redirects with literal IPv6 hosts
    (closes: #557015).
  * Automatically listen on port 443 if mod_gnutls is loaded (closes: #558234).
  * Add man page for split-logfile.